# Camp2024-Drawing-Competition-Backend

./: .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  Scirpt_README.md  Seed.md  docker-compose.yaml  example.py  judge.py  manage.py  pyproject.toml  selftest-cert.crt  selftest-cert.key
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feat-issue.yml
api/: admin.py  models.py  tasks.py  urls.py
api/controllers/: account.py  challenge.py  clip.py  round.py  statistic.py  submission.py  team.py
api/migrations/: 0001_initial.py  0002_remove_orderdetail_order_i_orderdetail_order_number_and_more.py  0002_submission_status_submission_time_and_more.py  0003_alter_challenge_image_url_alter_submission_score_and_more.py  0004_remove_submission_score_submission_fitness_and_more.py  0005_submission_execute_time_submission_line_number_and_more.py  0006_alter_round_end_time_alter_round_start_time.py  0007_alter_submission_line_number.py  0008_rename_line_number_submission_word_count.py  0009_challenge_title.py  0010_alter_round_end_time_alter_round_start_time.py  0011_challenge_difficulty.py  0012_submission_draw_image_url_alter_challenge_difficulty.py
api/model/: __init__.py  challenge.py  order.py  order_detail.py  part.py  round.py  submission.py  team.py
api/repositories/: base.py  challenge.py  round.py  submission.py  team.py
api/serializers/: clip.py  (+8 more)
backend/: celery.py  settings.py  urls.py
equipment_backend/: asgi.py  settings.py  urls.py  wsgi.py
judge/: judge.py
judge_dir/: drawing_code_template.py  main_drawing.py
(+22 files in other folders)
